
// Copyright (c) 2011, Hauke Strasdat
// Copyright (c) 2012, Steven Lovegrove
// Copyright (c) 2021, farm-ng, inc.
//
// Use of this source code is governed by an MIT-style
// license that can be found in the LICENSE file or at
// https://opensource.org/licenses/MIT.

syntax = "proto3";

package sophus.proto;

message ImageSize {
  // Image width in pixels.
  int32 width = 1;
  // Image height in pixels.
  int32 height = 2;
}

message ImageLayout {
  ImageSize size = 1;
  uint32 pitch_bytes = 2;
}

message PixelFormat {
  string number_type = 1;
  int32 num_components = 2;
  int32 num_bytes_per_component = 3;
}

message DynImage {
  ImageLayout layout = 1;
  PixelFormat pixel_format = 2;
  bytes data = 3;
}
