var searchData=
[
  ['radfromarcminute_2943',['radFromArcMinute',['../namespacefarm__ng.html#a7218d6f0868304c85b356bcdfc667a27',1,'farm_ng']]],
  ['radfromdeg_2944',['radFromDeg',['../namespacefarm__ng.html#aa8f225257f00b57ea57d1b247e06ee5b',1,'farm_ng::radFromDeg(T deg)'],['../namespacefarm__ng.html#ab6c40b2cfa8d8ce4c3a9f38fb3fafc6a',1,'farm_ng::radFromDeg(TPoint const &amp;v_deg)']]],
  ['range_2945',['range',['../classsophus_1_1_region.html#a05f024256bea3ff28fa6a27c49127f66',1,'sophus::Region']]],
  ['rawmutptr_2946',['rawMutPtr',['../classsophus_1_1_mut_dyn_image_view.html#a5e1ab24024475341a4e7f7d4fbf6c862',1,'sophus::MutDynImageView']]],
  ['rawmutrowptr_2947',['rawMutRowPtr',['../classsophus_1_1_mut_dyn_image_view.html#ae59e1e333bb1299a8095e75bc3349188',1,'sophus::MutDynImageView']]],
  ['rawptr_2948',['rawPtr',['../classsophus_1_1_dyn_image_view.html#a6fb6e8593394f826fea4d878cb47332a',1,'sophus::DynImageView']]],
  ['rawrowptr_2949',['rawRowPtr',['../classsophus_1_1_dyn_image_view.html#a33122f8b61a00d1ff97e2529dd7538f2',1,'sophus::DynImageView']]],
  ['ray_2950',['Ray',['../classsophus_1_1_ray.html#a1b56ccd42592558c346defb8ed3f0893',1,'sophus::Ray::Ray(Eigen::Matrix&lt; TScalar, kN, 1 &gt; const &amp;origin, UnitVector&lt; TScalar, kN &gt; const &amp;direction)'],['../classsophus_1_1_ray.html#a23bb0de3b14aa83e384c594866186619',1,'sophus::Ray::Ray(Ray const &amp;)=default']]],
  ['read_2951',['read',['../classcore_1_1event__client_1_1_event_client_protocol.html#ab593661e702af45f6b526bb95e691baf',1,'core.event_client.EventClientProtocol.read()'],['../classcore_1_1events__file__reader_1_1_events_file_reader.html#a9ad0dd8a25d70325e6e7185ce96483ef',1,'core.events_file_reader.EventsFileReader.read()']]],
  ['read_5fmessage_2952',['read_message',['../classcore_1_1events__file__reader_1_1_event_log_position.html#a3a84c3f7e44082d9294419eed407c8d1',1,'core.events_file_reader.EventLogPosition.read_message()'],['../classcore_1_1events__file__reader_1_1_events_file_reader.html#a456d619e2d1df689dd95a0dd2d5c680d',1,'core.events_file_reader.EventsFileReader.read_message()']]],
  ['read_5fmessages_2953',['read_messages',['../classcore_1_1events__file__reader_1_1_events_file_reader.html#a18b5a395536744698706b492ea9bb64b',1,'core::events_file_reader::EventsFileReader']]],
  ['read_5fnext_5fevent_2954',['read_next_event',['../classcore_1_1events__file__reader_1_1_events_file_reader.html#a8622321e030c2d4614fb1694dbdf9960',1,'core::events_file_reader::EventsFileReader']]],
  ['readbytesfrombinaryfile_2955',['readBytesFromBinaryFile',['../namespacefarm__ng.html#a27dbbb4bddd9b5f49232f1cb10c89b97',1,'farm_ng']]],
  ['readjsonstringfromjsonfile_2956',['readJsonStringFromJsonFile',['../namespacefarm__ng.html#a41f0fd25d199d184e97f45684ac6f388',1,'farm_ng']]],
  ['readnextevent_2957',['readNextEvent',['../classfarm__ng_1_1_event_log_reader.html#a2562eedf6477ae422f0e4400017e6bc6',1,'farm_ng::EventLogReader']]],
  ['readnexteventimpl_2958',['readNextEventImpl',['../structfarm__ng_1_1_event_log_reader_base.html#a84f92e92eb5a5035b6912ce351daf1ea',1,'farm_ng::EventLogReaderBase']]],
  ['readpayload_2959',['readPayload',['../structfarm__ng_1_1_event_log_reader_base.html#aa98b919cbe5cc570410abb97013da7d1',1,'farm_ng::EventLogReaderBase::readPayload()'],['../classfarm__ng_1_1_event_log_pos.html#abc70e283ba93152de6522f44929109fd',1,'farm_ng::EventLogPos::readPayload()']]],
  ['readprotobuffrombinaryfile_2960',['readProtobufFromBinaryFile',['../namespacefarm__ng.html#a8443bf34cdc601096af1502365f2dad1',1,'farm_ng']]],
  ['readprotobuffromjsonfile_2961',['readProtobufFromJsonFile',['../namespacefarm__ng.html#a781444aaaef0adff2e69b9dcae1472a1',1,'farm_ng']]],
  ['real_2962',['real',['../classsophus_1_1_complex.html#a6411b7ab46cf4bde1d352d56786e506e',1,'sophus::Complex::real() -&gt; Scalar &amp;'],['../classsophus_1_1_complex.html#a680e0b0331cb9d7b4c1f229abdc52f42',1,'sophus::Complex::real() const -&gt; Scalar const &amp;'],['../classsophus_1_1_quaternion.html#aa62f0ec0c295bbae8fd8365cd89e057e',1,'sophus::Quaternion::real() const -&gt; Scalar const &amp;'],['../classsophus_1_1_quaternion.html#a73326e236224d1935f8122d81f1c5957',1,'sophus::Quaternion::real() -&gt; Scalar &amp;']]],
  ['record_2963',['record',['../classcore_1_1event__service__recorder_1_1_event_service_recorder.html#a15a16d816e99577e413e11675491897c',1,'core::event_service_recorder::EventServiceRecorder']]],
  ['record_5fcommand_2964',['record_command',['../namespacecore_1_1event__service__recorder.html#af5b8100ad48ac5834494c832f0d0379c',1,'core::event_service_recorder']]],
  ['red_2965',['red',['../structsophus_1_1_color.html#a03a847f081cb563c0f41cd4085a1e881',1,'sophus::Color']]],
  ['reduce_2966',['reduce',['../structsophus_1_1_image_view.html#af291b09e69b69e5b9d812ee7ad61f154',1,'sophus::ImageView::reduce()'],['../namespacesophus_1_1concepts.html#a4d10db8864573f728be7e0d25cc8e50a',1,'sophus::concepts::reduce(TPoint const &amp;x, TReduce const &amp;initial, TFunc &amp;&amp;func) -&gt; TReduce'],['../namespacesophus_1_1concepts.html#ab6a66203cb29b2efabdbe84bf5f5975f',1,'sophus::concepts::reduce(TPoint const &amp;a, TPoint const &amp;b, TReduce const &amp;initial, TFunc &amp;&amp;func) -&gt; TReduce']]],
  ['reducearg_2967',['reduceArg',['../namespacesophus_1_1concepts.html#a35919df02a0693412ba2bc41fa8c140f',1,'sophus::concepts::reduceArg(TPoint const &amp;x, TReduce &amp;reduce, TFunc &amp;&amp;func)'],['../namespacesophus_1_1concepts.html#aadfda684aa75f8ed23a19ce90da522d3',1,'sophus::concepts::reduceArg(TPoint const &amp;a, TPoint const &amp;b, TReduce &amp;reduce, TFunc &amp;&amp;func)']]],
  ['region_2968',['Region',['../classsophus_1_1_region.html#a307da3b50a25077151dfc1c175a12337',1,'sophus::Region']]],
  ['regiontests_2969',['regionTests',['../region__test_8cpp.html#a1eda7e5791b97251e0f0c05d91799c0f',1,'region_test.cpp']]],
  ['reinterpretas_2970',['reinterpretAs',['../classsophus_1_1_dyn_image.html#a12121f7bfde4d863bfffcd2e549ff337',1,'sophus::DynImage']]],
  ['replace_2971',['replace',['../structfarm__ng_1_1plotting_1_1_curve_reset_predicate.html#a96db6fc252e16b99434af531d6f7b436',1,'farm_ng::plotting::CurveResetPredicate']]],
  ['request_5freply_2972',['request_reply',['../classcore_1_1event__client_1_1_event_client.html#ae8dec79c450fad1ab378556edaffa31d',1,'core::event_client::EventClient']]],
  ['request_5freply_5fhandler_2973',['request_reply_handler',['../classcore_1_1event__service_1_1_event_service_grpc.html#a7cfcbfb155f511f45c7712b7daf12b5b',1,'core.event_service.EventServiceGrpc.request_reply_handler(self)'],['../classcore_1_1event__service_1_1_event_service_grpc.html#a561da722bc2cf00c430f95f5e9f18c34',1,'core.event_service.EventServiceGrpc.request_reply_handler(self, Callable handler)']]],
  ['requestreply_2974',['requestReply',['../classcore_1_1event__service_1_1_event_service_grpc.html#a0c0824f9522c241bfad5dc26a638e91b',1,'core::event_service::EventServiceGrpc']]],
  ['requires_2975',['requires',['../classsophus_1_1_region.html#a34f4ce63f2ab11cab6d3a14cb045358b',1,'sophus::Region::requires(kDim==2) static auto createPerAxis(Region&lt; TScalar &gt; const &amp;segment_x'],['../classsophus_1_1_region.html#a841249951d56719ff924a1dcac2cc522',1,'sophus::Region::requires(kDim==3) static auto createPerAxis(Region&lt; TScalar &gt; const &amp;segment_x'],['../classsophus_1_1_region.html#a97920cd398827b13a1c31cae9fc2b78d',1,'sophus::Region::requires(kDim==4) static auto createPerAxis(Region&lt; TScalar &gt; const &amp;segment_x']]],
  ['reset_2976',['reset',['../structfarm__ng_1_1_event_log_reader_base.html#a801fa81d789ab97476a479a50aac8782',1,'farm_ng::EventLogReaderBase::reset()'],['../classfarm__ng_1_1_event_log_reader.html#af790cbba8d288e86de65169b09de4de4',1,'farm_ng::EventLogReader::reset()'],['../classsophus_1_1_image.html#a4d757013118bae8b79321fb5768b8822',1,'sophus::Image::reset()'],['../classsophus_1_1_mut_image.html#a18e600def58f93d7eab27a52ef29ce91',1,'sophus::MutImage::reset()'],['../classcore_1_1event__service_1_1_event_service_grpc.html#a43eb2ee62ef00f0f899234ac2b1e82f6',1,'core.event_service.EventServiceGrpc.reset()']]],
  ['reset_5fdata_2977',['reset_data',['../classcore_1_1event__service__metrics_1_1_event_service_health_metrics.html#a6bb539a1ec68edf825d4479836f89c7b',1,'core::event_service_metrics::EventServiceHealthMetrics']]],
  ['restartandrun_2978',['restartAndRun',['../classfarm__ng_1_1_context.html#ac222aec4b873bcabed51504507096036',1,'farm_ng::Context']]],
  ['rightminus_2979',['rightMinus',['../classsophus_1_1lie_1_1_group.html#a84e99aa124c7dc42a535200d1f233343',1,'sophus::lie::Group']]],
  ['rightplus_2980',['rightPlus',['../classsophus_1_1lie_1_1_group.html#a8eb1ae39fa46fd062e7dde8478635bbb',1,'sophus::lie::Group']]],
  ['roi_2981',['roi',['../classsophus_1_1_camera_model_t.html#a5ca3da92ad883d7582f867c991a3b352',1,'sophus::CameraModelT::roi()'],['../classsophus_1_1_camera_model.html#a0e9f930b5add54c46fabe37f2f287bcb',1,'sophus::CameraModel::roi()']]],
  ['rotation_2982',['rotation',['../classsophus_1_1_isometry2.html#a6021a5ba4ff8f13b77ff263e2d5c6765',1,'sophus::Isometry2::rotation()'],['../classsophus_1_1_isometry3.html#ae8e81a7e5bd520fc0a5d3544f633016e',1,'sophus::Isometry3::rotation()'],['../classsophus_1_1_pose3.html#adb496b7e0e56315f39ef4f1e214f3a75',1,'sophus::Pose3::rotation()'],['../classsophus_1_1_similarity2.html#a0b00113a29429426079c3ea4df5a1aee',1,'sophus::Similarity2::rotation()'],['../classsophus_1_1_similarity3.html#a750cab289bc50e370962e5c628fce749',1,'sophus::Similarity3::rotation()'],['../classsophus_1_1_spiral_similarity2.html#aa3599bc6dff21f6ccc5837e3333794d8',1,'sophus::SpiralSimilarity2::rotation()'],['../classsophus_1_1_spiral_similarity3.html#a3d8db9a4953d7fe39b5f689a0516aba7',1,'sophus::SpiralSimilarity3::rotation()']]],
  ['rotation2_2983',['Rotation2',['../classsophus_1_1_rotation2.html#a499adef833114562ea37b17ab11c6c81',1,'sophus::Rotation2::Rotation2()=default'],['../classsophus_1_1_rotation2.html#a9bdbe6ce2cd05d0bb82d87e7e2f8fa7f',1,'sophus::Rotation2::Rotation2(UninitTag)'],['../classsophus_1_1_rotation2.html#adc675e7c0cbdd1539bea74c24589f1a9',1,'sophus::Rotation2::Rotation2(TScalar angle)'],['../classsophus_1_1_rotation2.html#a66835f2194f09fc912f11cd545afeb2d',1,'sophus::Rotation2::Rotation2(TOtherScalar angle)']]],
  ['rotation2fromnormal_2984',['rotation2FromNormal',['../namespacesophus.html#a06e27daaf672204b38a7d101f8b5dbaa',1,'sophus']]],
  ['rotation3_2985',['Rotation3',['../classsophus_1_1_rotation3.html#a4fbfc2821a9408e442d7e90919730fab',1,'sophus::Rotation3::Rotation3()=default'],['../classsophus_1_1_rotation3.html#aaa79e818f27f8b4d222b7bd4de442058',1,'sophus::Rotation3::Rotation3(UninitTag)']]],
  ['rotation3fromnormal_2986',['rotation3FromNormal',['../namespacesophus.html#a7e6a919c0af81fedc23562a764aa8227',1,'sophus']]],
  ['rotation3fromplane_2987',['rotation3FromPlane',['../namespacesophus.html#a0b6feadd49b04f1f699370ccf02ecdd1',1,'sophus']]],
  ['rotationmatrix_2988',['rotationMatrix',['../classsophus_1_1_isometry2.html#a269f7893a69e261750abe4b3b1ffb01f',1,'sophus::Isometry2::rotationMatrix()'],['../classsophus_1_1_isometry3.html#aaaf45387f84c109a39326100a01bb4e5',1,'sophus::Isometry3::rotationMatrix()'],['../classsophus_1_1_rotation2.html#af7b4530f24ae5185e13bb9d3c4bcedd3',1,'sophus::Rotation2::rotationMatrix()'],['../classsophus_1_1_rotation3.html#aea03140e2fe0d95eb8a2118e0a088c7d',1,'sophus::Rotation3::rotationMatrix()'],['../classsophus_1_1_similarity2.html#a7f76ceee8282ddd2150bdf4e9d7fd797',1,'sophus::Similarity2::rotationMatrix()'],['../classsophus_1_1_similarity3.html#a8b562e25306bd82e1feae3c93475ad45',1,'sophus::Similarity3::rotationMatrix()'],['../classsophus_1_1_spiral_similarity2.html#a4ee93e41ce665b480e01619436f3b23e',1,'sophus::SpiralSimilarity2::rotationMatrix()'],['../classsophus_1_1_spiral_similarity3.html#a759fff442b8a4a843b11210cdfadb4e1',1,'sophus::SpiralSimilarity3::rotationMatrix()']]],
  ['rotthroughpoints_2989',['rotThroughPoints',['../namespacesophus.html#a3bd7aaf48384e1e2536f542ea6652945',1,'sophus::rotThroughPoints(UnitVector3&lt; TScalar &gt; const &amp;from, UnitVector3&lt; TScalar &gt; const &amp;to) -&gt; Rotation3&lt; TScalar &gt;'],['../namespacesophus.html#a45d8491e1ba2c715d9ad4eda2171fd7a',1,'sophus::rotThroughPoints(Eigen::Vector&lt; TScalar, 3 &gt; const &amp;from, Eigen::Vector&lt; TScalar, 3 &gt; const &amp;to) -&gt; Rotation3&lt; TScalar &gt;']]],
  ['round_2990',['round',['../namespacesophus.html#a0fec2c43fc2275a69c288429122febac',1,'sophus']]],
  ['roundcast_2991',['roundCast',['../classsophus_1_1_region.html#a5c17c91635eebee0f7da87037e9de216',1,'sophus::Region']]],
  ['rowinbounds_2992',['rowInBounds',['../structsophus_1_1_image_view.html#a40129e78eeffd9d5567feee8f85bea77',1,'sophus::ImageView']]],
  ['rowptr_2993',['rowPtr',['../structsophus_1_1_image_view.html#a641f30d180f4307f70453cb3fc5f789a',1,'sophus::ImageView']]],
  ['rowptrmut_2994',['rowPtrMut',['../classsophus_1_1_mut_image_view.html#a225804259b97cfe27737921ff9c84c31',1,'sophus::MutImageView']]],
  ['run_2995',['run',['../classfarm__ng_1_1_context.html#a8a694331273d55f1c355c627af6e16e0',1,'farm_ng::Context']]],
  ['runalltests_2996',['runAllTests',['../structsophus_1_1test_1_1_division_ring_test_suite.html#ab5839895c513190704b94613063ceda8',1,'sophus::test::DivisionRingTestSuite::runAllTests()'],['../structsophus_1_1test_1_1_lie_group_prop_test_suite.html#a091bfeecbb74101622384404e672a5d3',1,'sophus::test::LieGroupPropTestSuite::runAllTests()'],['../structsophus_1_1test_1_1_manifold_prop_test_suite.html#a016528796963805af40e40c32007da57',1,'sophus::test::ManifoldPropTestSuite::runAllTests()'],['../structsophus_1_1test_1_1_interpolate_prop_test_suite.html#a824d67c427b2528a1d297999697098f3',1,'sophus::test::InterpolatePropTestSuite::runAllTests()'],['../structsophus_1_1test_1_1_spline_prop_test_suite.html#a5dec2b234e144da3e91cbcbcf1d2a7d5',1,'sophus::test::SplinePropTestSuite::runAllTests()']]],
  ['runbaserotationtests_2997',['runBaseRotationTests',['../namespacesophus_1_1test.html#ad9880e808b5537fd94d78fe8fa054eee',1,'sophus::test']]],
  ['runisometry2accessortests_2998',['runIsometry2AccessorTests',['../namespacesophus_1_1test.html#a4bed3f0e3ccabb522491570773f511ee',1,'sophus::test']]],
  ['runisometry2unittests_2999',['runIsometry2UnitTests',['../namespacesophus_1_1test.html#a19ad83e7a32e494d06392005b18f2878',1,'sophus::test']]],
  ['runisometry3accessortests_3000',['runIsometry3AccessorTests',['../namespacesophus_1_1test.html#abd08c656322034deaea7a53dd69ec623',1,'sophus::test']]],
  ['runisometry3unittests_3001',['runIsometry3UnitTests',['../namespacesophus_1_1test.html#a45bf991557b896d6bedfefcfd6386bc0',1,'sophus::test']]],
  ['runisometryaccessortests_3002',['runIsometryAccessorTests',['../namespacesophus_1_1test.html#ab747e0aba7623484ef585b29b59b518b',1,'sophus::test']]],
  ['runrotation2accessortests_3003',['runRotation2AccessorTests',['../namespacesophus_1_1test.html#adb966e4decd2fc564f526b60e14d901f',1,'sophus::test']]],
  ['runrotation2unittests_3004',['runRotation2UnitTests',['../namespacesophus_1_1test.html#aeae63db78b9abaf1158e5ba26caccae1',1,'sophus::test']]],
  ['runrotation3accessortests_3005',['runRotation3AccessorTests',['../namespacesophus_1_1test.html#a762db0041ef95f1e17f2f8c14473cd22',1,'sophus::test']]],
  ['runrotation3unittests_3006',['runRotation3UnitTests',['../namespacesophus_1_1test.html#ac6077b7deb003fc09ff8b09afe12b545',1,'sophus::test']]],
  ['runrotationaccessortests_3007',['runRotationAccessorTests',['../namespacesophus_1_1test.html#ada3f40b8e35196405f32be9c77e49c56',1,'sophus::test']]],
  ['runsimilarity2accessortests_3008',['runSimilarity2AccessorTests',['../namespacesophus_1_1test.html#a82b5a32bfd82f29de359fb9dc01bdafb',1,'sophus::test']]],
  ['runsimilarity2unittests_3009',['runSimilarity2UnitTests',['../namespacesophus_1_1test.html#a357f7e5be143155b9172602499282e54',1,'sophus::test']]],
  ['runsimilarity3accessortests_3010',['runSimilarity3AccessorTests',['../namespacesophus_1_1test.html#a21781173a8d4012141605493147ec21f',1,'sophus::test']]],
  ['runsimilarity3unittests_3011',['runSimilarity3UnitTests',['../namespacesophus_1_1test.html#a02034daf202b86aa80fee44e58acae0f',1,'sophus::test']]],
  ['runsimilarityaccessortests_3012',['runSimilarityAccessorTests',['../namespacesophus_1_1test.html#a7a318c3082a1028d9f77e2b025b93252',1,'sophus::test']]],
  ['runspiralsimilarity2accessortests_3013',['runSpiralSimilarity2AccessorTests',['../namespacesophus_1_1test.html#a0ece4966492e3e5ebb31638f1ddda4ad',1,'sophus::test']]],
  ['runspiralsimilarity2unittests_3014',['runSpiralSimilarity2UnitTests',['../namespacesophus_1_1test.html#a52af2622f9c330adc5473924f128539c',1,'sophus::test']]],
  ['runspiralsimilarity3accessortests_3015',['runSpiralSimilarity3AccessorTests',['../namespacesophus_1_1test.html#a8e7e4f62faaa530457a7e9f6ca40b52c',1,'sophus::test']]],
  ['runspiralsimilarity3unittests_3016',['runSpiralSimilarity3UnitTests',['../namespacesophus_1_1test.html#a145c51fd4c985e0732a38919b79fd515',1,'sophus::test']]],
  ['runspiralsimilarityaccessortests_3017',['runSpiralSimilarityAccessorTests',['../namespacesophus_1_1test.html#a1c35fa489cec557a3c7d712f04b93e03',1,'sophus::test']]],
  ['runtimeformatimpl_3018',['runtimeFormatImpl',['../namespacefarm__ng_1_1details.html#a592e6b40023d287f75f316f49cb9989e',1,'farm_ng::details']]],
  ['runtranslationaccessortests_3019',['runTranslationAccessorTests',['../namespacesophus_1_1test.html#a8f7ca4a5818e2434646c927564d4903e',1,'sophus::test']]],
  ['runtxtytests_3020',['runTxTyTests',['../namespacesophus_1_1test.html#a1317a6edf2d4018722fb04d992a8b537',1,'sophus::test']]],
  ['runtxtytztests_3021',['runTxTyTzTests',['../namespacesophus_1_1test.html#a233fc39255aa33783670f1a573fc6a61',1,'sophus::test']]],
  ['rununitcomplextests_3022',['runUnitComplexTests',['../namespacesophus_1_1test.html#ac20d15886f03f460af088744781fa97b',1,'sophus::test']]],
  ['rununitquaterniontests_3023',['runUnitQuaternionTests',['../namespacesophus_1_1test.html#a4f733c545b153cf274424ea0c11c8b89',1,'sophus::test']]]
];
